// Original file: exa/context_module_pb/context_module.proto

import type { CodeContextItem as _exa_codeium_common_pb_CodeContextItem, CodeContextItem__Output as _exa_codeium_common_pb_CodeContextItem__Output } from '../../exa/codeium_common_pb/CodeContextItem';

export interface ContextChangeOracleItems {
  'oracleItems'?: (_exa_codeium_common_pb_CodeContextItem)[];
}

export interface ContextChangeOracleItems__Output {
  'oracleItems': (_exa_codeium_common_pb_CodeContextItem__Output)[];
}
