// Original file: exa/context_module_pb/context_module.proto

export const ContextChangeType = {
  CONTEXT_CHANGE_TYPE_UNSPECIFIED: 'CONTEXT_CHANGE_TYPE_UNSPECIFIED',
  CONTEXT_CHANGE_TYPE_ACTIVE_DOCUMENT: 'CONTEXT_CHANGE_TYPE_ACTIVE_DOCUMENT',
  CONTEXT_CHANGE_TYPE_CURSOR_POSITION: 'CONTEXT_CHANGE_TYPE_CURSOR_POSITION',
  CONTEXT_CHANGE_TYPE_CHAT_MESSAGE_RECEIVED: 'CONTEXT_CHANGE_TYPE_CHAT_MESSAGE_RECEIVED',
  CONTEXT_CHANGE_TYPE_OPEN_DOCUMENTS: 'CONTEXT_CHANGE_TYPE_OPEN_DOCUMENTS',
  CONTEXT_CHANGE_TYPE_ORACLE_ITEMS: 'CONTEXT_CHANGE_TYPE_ORACLE_ITEMS',
  CONTEXT_CHANGE_TYPE_PINNED_CONTEXT: 'CONTEXT_CHANGE_TYPE_PINNED_CONTEXT',
  CONTEXT_CHANGE_TYPE_PINNED_GUIDELINE: 'CONTEXT_CHANGE_TYPE_PINNED_GUIDELINE',
  CONTEXT_CHANGE_TYPE_ACTIVE_NODE: 'CONTEXT_CHANGE_TYPE_ACTIVE_NODE',
} as const;

export type ContextChangeType =
  | 'CONTEXT_CHANGE_TYPE_UNSPECIFIED'
  | 0
  | 'CONTEXT_CHANGE_TYPE_ACTIVE_DOCUMENT'
  | 1
  | 'CONTEXT_CHANGE_TYPE_CURSOR_POSITION'
  | 2
  | 'CONTEXT_CHANGE_TYPE_CHAT_MESSAGE_RECEIVED'
  | 3
  | 'CONTEXT_CHANGE_TYPE_OPEN_DOCUMENTS'
  | 4
  | 'CONTEXT_CHANGE_TYPE_ORACLE_ITEMS'
  | 5
  | 'CONTEXT_CHANGE_TYPE_PINNED_CONTEXT'
  | 6
  | 'CONTEXT_CHANGE_TYPE_PINNED_GUIDELINE'
  | 7
  | 'CONTEXT_CHANGE_TYPE_ACTIVE_NODE'
  | 9

export type ContextChangeType__Output = typeof ContextChangeType[keyof typeof ContextChangeType]
