// Original file: exa/context_module_pb/context_module.proto

export const ContextRefreshReason = {
  CONTEXT_REFRESH_REASON_UNSPECIFIED: 'CONTEXT_REFRESH_REASON_UNSPECIFIED',
  CONTEXT_REFRESH_REASON_AUTOCOMPLETE: 'CONTEXT_REFRESH_REASON_AUTOCOMPLETE',
  CONTEXT_REFRESH_REASON_CHAT: 'CONTEXT_REFRESH_REASON_CHAT',
  CONTEXT_REFRESH_REASON_IDE_ACTION: 'CONTEXT_REFRESH_REASON_IDE_ACTION',
  CONTEXT_REFRESH_REASON_CHAT_COMPLETION: 'CONTEXT_REFRESH_REASON_CHAT_COMPLETION',
} as const;

export type ContextRefreshReason =
  | 'CONTEXT_REFRESH_REASON_UNSPECIFIED'
  | 0
  | 'CONTEXT_REFRESH_REASON_AUTOCOMPLETE'
  | 1
  | 'CONTEXT_REFRESH_REASON_CHAT'
  | 2
  | 'CONTEXT_REFRESH_REASON_IDE_ACTION'
  | 4
  | 'CONTEXT_REFRESH_REASON_CHAT_COMPLETION'
  | 5

export type ContextRefreshReason__Output = typeof ContextRefreshReason[keyof typeof ContextRefreshReason]
