// Original file: exa/context_module_pb/context_module.proto

export const ContextUseCase = {
  CONTEXT_USE_CASE_UNSPECIFIED: 'CONTEXT_USE_CASE_UNSPECIFIED',
  CONTEXT_USE_CASE_AUTOCOMPLETE: 'CONTEXT_USE_CASE_AUTOCOMPLETE',
  CONTEXT_USE_CASE_CHAT: 'CONTEXT_USE_CASE_CHAT',
  CONTEXT_USE_CASE_CHAT_COMPLETION: 'CONTEXT_USE_CASE_CHAT_COMPLETION',
  CONTEXT_USE_CASE_CORTEX_RESEARCH: 'CONTEXT_USE_CASE_CORTEX_RESEARCH',
  CONTEXT_USE_CASE_EVAL: 'CONTEXT_USE_CASE_EVAL',
  CONTEXT_USE_CASE_CHAT_COMPLETION_GENERATE: 'CONTEXT_USE_CASE_CHAT_COMPLETION_GENERATE',
  CONTEXT_USE_CASE_SUPERCOMPLETE: 'CONTEXT_USE_CASE_SUPERCOMPLETE',
  CONTEXT_USE_CASE_FAST_APPLY: 'CONTEXT_USE_CASE_FAST_APPLY',
  CONTEXT_USE_CASE_COMMAND_TERMINAL: 'CONTEXT_USE_CASE_COMMAND_TERMINAL',
} as const;

export type ContextUseCase =
  | 'CONTEXT_USE_CASE_UNSPECIFIED'
  | 0
  | 'CONTEXT_USE_CASE_AUTOCOMPLETE'
  | 1
  | 'CONTEXT_USE_CASE_CHAT'
  | 2
  | 'CONTEXT_USE_CASE_CHAT_COMPLETION'
  | 3
  | 'CONTEXT_USE_CASE_CORTEX_RESEARCH'
  | 4
  | 'CONTEXT_USE_CASE_EVAL'
  | 5
  | 'CONTEXT_USE_CASE_CHAT_COMPLETION_GENERATE'
  | 6
  | 'CONTEXT_USE_CASE_SUPERCOMPLETE'
  | 7
  | 'CONTEXT_USE_CASE_FAST_APPLY'
  | 8
  | 'CONTEXT_USE_CASE_COMMAND_TERMINAL'
  | 9

export type ContextUseCase__Output = typeof ContextUseCase[keyof typeof ContextUseCase]
